--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-        "dev": "vite",
-        "build": "tsc -b & vite build",
-        "preview": "vite preview"
+        "dev": "nodemon",
+        "build": "tsc -b & vite build"
     },
     "devDependencies": {
+        "nodemon": "^3.0.1",
         "typescript": "^5.2.2",
         "vite": "^3.2.7"
     }
